# tengiz-ROV-code_space

./: analog_line_follower.py  gorev1.py  gorev2.py
deneme/color_detection/: claude_color_detection.py  color_detector_launc.py  color_detector_node.py  color_publisher_node.py
deneme/görev_2_deneme/: camera_node.py  line_follower_node.py  motor_control_node.py  package.xml  setup.py
deneme/görev_2_deneme/launch/: line_follower_launch.py
deneme/görev_3_deneme/: camera_node.py  door_detector_node.py  motor_control_node.py  package.xml  setup.py
görev_2/: ardunio_kodları.cpp  camera_node.py  line_follower_node.py  motor_control_node.py
