<?xml version="1.0"?>
<package format="2">
  <name>door_navigation</name>
  <version>0.0.1</version>
  <description>Door navigation package for underwater robot</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>

  <exec_depend>python3</exec_depend>
</package>
